@@ -51,9 +51,6 @@ db.type=h2
 db.url=jdbc:h2:databases/mah2
 db.username=
 db.password=
-#For web console
-db.web.start=false
-db.web.port=8091
 #to compact the database size at shutdown (may take longer but will free up disk space)
 db.h2.shutdownCompact=false
 
